# dual_quaternion

./: Cargo.toml  README.md
src/: lib.rs
tests/: lib.rs
