[package]
name = "dual_quaternion"
version = "0.2.1"
authors = ["HamaguRe <space-denpa.jp>"]
edition = "2018"

[dependencies]
dual_number = {git = "https://github.com/HamaguRe/dual_number.git", rev = "a45ead2711ee9b54a8c39a28c100c57eb5d4636d"}
quaternion = {git = "https://github.com/HamaguRe/quaternion.git", rev = "9e7d26098701f8adda8950ffc0775af456b4150c"}