[package]
name = "dual_quaternion"
version = "0.2.1"
authors = ["HamaguRe <space-denpa.jp>"]
edition = "2018"

[dependencies]
dual_number = {git = "https://github.com/HamaguRe/dual_number.git", rev = "a45ead2711ee9b54a8c39a28c100c57eb5d4636d"}
quaternion = {git = "https://github.com/HamaguRe/quaternion.git", rev = "46cb730db30e07b8d01e767cd5202c421506026a"}